[package]
name = "monb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brightness = "0.5.0"
clap = { version = "4.1.8", features = ["derive", "cargo"] }
once_cell = "1.17.1"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.7.1"
