[package]
name = "monb"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brightness = "0.5.0"
clap = { version = "4.4.7", features = ["derive", "cargo"] }
const_format = "0.2.32"
log = { version = "0.4.20", features = ["std"] }
logger = { path = "../logger", version = "0.1.1" }
once_cell = "1.18.0"
regex = "1.10.2"
strum = { version = "0.25.0", features = ["derive"] }
proc-macro2 = "1.0.69"
