[package]
name = "shmon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["cargo"] }
log = { version = "0.4.17", features = ["std"] }
logger = { path = "../logger", version = "0.1.0" }
once_cell = "1.17.1"
regex = "1.8.1"
windows-sys = { version = "0.45.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }
