[package]
name = "shmon"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["cargo"] }
log = { version = "0.4.20", features = ["std"] }
logger = { path = "../logger", version = "0.1.1" }
once_cell = "1.18.0"
regex = "1.10.2"
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }
